--- a/main.css
+++ b/main.css
@@ -89,7 +89,7 @@ body{
     color: #317787;
     display: inline-block;
     border-radius: 0;
-    padding: 6px 25px;
+    padding: 6px 15px;
     border-radius: 20px;
     min-width: 70px;
     max-width: 60%;
@@ -132,7 +132,7 @@ body{
 .speech-right>.speech {
     background: linear-gradient(135deg, rgb(48, 71, 236) 0%, rgb(15, 34, 167) 100%);
     color: white;
-    text-align: right;
+    text-align: center;
 }
 .speech-right>.speech .media-heading {
     color: #a07617;
@@ -156,8 +156,8 @@ body{
     transition: all .25s;
 }
 .form-control {
-    font-size: 25px;
-    height: 100%;
+    font-size: 15px;
+    height: 40px;
     border-radius: 0;
     box-shadow: none;
     border: 1px solid #e9e9e9;
@@ -185,7 +185,7 @@ a:hover{
 }
 
 .list-group{
-    width: 300px;
+    width: 60%;
 }
 .option{
     font-size: 14px;
@@ -199,6 +199,7 @@ a:hover{
     display: block;
     margin: 5px;
     width: auto;
+    text-align: center;
 }
 .option:hover{
     background: linear-gradient(135deg, rgb(48, 71, 236) 0%, rgb(15, 34, 167) 100%);
@@ -213,4 +214,7 @@ a:hover{
 }
 .submit{
     padding-left: 0px !important;
+}
+p{
+    margin: 0px 0 0px;
 }
