--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+*{
+    border-style: none !important;
+}
 html {
     scroll-behavior: smooth;
   }
@@ -92,6 +95,7 @@ body{
     padding: 6px 15px;
     border-radius: 20px;
     min-width: 70px;
+    min-height: 30px;
     max-width: 60%;
     text-align: center;
 }
@@ -157,7 +161,7 @@ body{
 }
 .form-control {
     font-size: 15px;
-    height: 40px;
+    height: 42px;
     border-radius: 0;
     box-shadow: none;
     border: 1px solid #e9e9e9;
