--- a/main.css
+++ b/main.css
@@ -21,10 +21,9 @@ body{
 }
 .panel-heading {
     position: relative;
-    height: 50px;
     padding: 0;
     border-bottom:1px solid #eee;
-    height: 180px;
+    height: 100px;
     background: linear-gradient(135deg, rgb(48, 71, 236) 0%, rgb(15, 34, 167) 100%);
     color: white
 }
@@ -75,8 +74,12 @@ body{
     float: left;
 }
 .img-sm {
-    width: 46px;
-    height: 46px;
+    width: 50px;
+    height: 50px;
+}
+.img-m {
+    width: 25px;
+    height: 25px;
 }
 .media-block .media-body {
     display: block;
@@ -167,6 +170,7 @@ body{
     box-shadow: none;
     border: 1px solid #e9e9e9;
     transition-duration: .5s;
+    border-radius: 20px;
 }
 .nano>.nano-pane {
     background-color: rgba(0,0,0,0.1);
@@ -190,7 +194,9 @@ a:hover{
 }
 
 .list-group{
-    width: 60%;
+    width: 100%;
+    padding-left: 0;
+    margin-bottom: 20px;
 }
 .option{
     font-size: 14px;
@@ -224,28 +230,32 @@ a:hover{
 p{
     margin: 0px 0 0px;
 }
-.mainbot{
-    width: 100px;
-}
-.botheading{
-    margin-left: 30px;
-   
-}
-.botheading h4{
-    line-height: 1.5em;
-}
+
 .shut{
-    font-size: 40px;
+    font-size: 30px;
     float: right;
     margin-right: 20px;
-    margin-top: 15px;
+    margin-top: 20px;
+    cursor: pointer;
+
 }
-.hello{
-    color: #ffc950;
-    font-family: cursive;
+.avatar{
+    position: absolute;
+    margin-left: 20px;
+    margin-top: 20px;
 }
-.companyname{
-    color: #00e7ff;
+.fa-praying-hands{
+    color: #b10f70;
+}
+.list-group li{
+    margin-left: 40%;
+}
+.botname{
+    position: absolute;
+    /* margin-right: 20px; */
+    margin-left: 15px;
+    font-size: 20px;
     font-weight: bold;
-    font-family: monospace;
+    margin-top: 20px;
 }
+
