--- a/main.css
+++ b/main.css
@@ -259,3 +259,10 @@ p{
     margin-top: 20px;
 }
 
+@media only screen and (max-width: 600px) {
+    .container {
+        width: 100% !important;
+        padding:0px !important;
+        margin: 0px !important;
+    }
+  }
