--- a/main.css
+++ b/main.css
@@ -170,7 +170,7 @@ body{
     box-shadow: none;
     border: 1px solid #e9e9e9;
     transition-duration: .5s;
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 .nano>.nano-pane {
     background-color: rgba(0,0,0,0.1);
@@ -194,7 +194,7 @@ a:hover{
 }
 
 .list-group{
-    width: 100%;
+    width: 50%;
     padding-left: 0;
     margin-bottom: 20px;
 }
@@ -209,7 +209,7 @@ a:hover{
     border-style: none;
     display: block;
     margin: 5px;
-    width: auto;
+    width: 100%;
     text-align: center;
 }
 .option:hover{
@@ -237,6 +237,7 @@ p{
     margin-right: 20px;
     margin-top: 20px;
     cursor: pointer;
+    color: white;
 
 }
 .avatar{
@@ -259,6 +260,41 @@ p{
     margin-top: 20px;
 }
 
+
+.requirementform{
+    width: 80%;
+    background-color: #a94442;
+    position: absolute;
+    top: 120px;
+    left: 60px;
+    height: 350px;
+    overflow: scroll;
+    overflow-x: hidden;
+    display: block;
+    border-style: solid!important;
+    border-width: 10px;
+    border-color: rgba(255,255,255,.1);
+}
+h3{
+    color: white;
+}
+
+/* scrollbar */
+.requirementform::-webkit-scrollbar {
+    width: 1px;
+}
+ 
+.requirementform::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+.requirementform::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+label{
+    color: white !important;
+}
 @media only screen and (max-width: 600px) {
     .container {
         width: 100% !important;
