--- a/main.css
+++ b/main.css
@@ -96,12 +96,12 @@ body{
     color: #317787;
     display: inline-block;
     border-radius: 0;
-    padding: 6px 15px;
+    padding: 15px;
     border-radius: 20px;
     min-width: 70px;
     min-height: 30px;
-    max-width: 60%;
-    text-align: center;
+    max-width: 75%;
+    /* text-align: center; */
 }
 .speech-right>.speech:before {
     left: auto;
@@ -170,7 +170,7 @@ body{
     box-shadow: none;
     border: 1px solid #e9e9e9;
     transition-duration: .5s;
-    /* border-radius: 20px; */
+    border-radius: 20px;
 }
 .nano>.nano-pane {
     background-color: rgba(0,0,0,0.1);
@@ -182,9 +182,6 @@ body{
     opacity: 0;
     -webkit-transition: all .7s;
     transition: all .7s;
-}
-.panel-footer{
-    padding: 0px !important;
 }
 .option:hover{
     cursor: pointer;
@@ -226,6 +223,9 @@ a:hover{
 }
 .submit{
     padding-left: 0px !important;
+    padding-left: 0px !important;
+    margin-left: 10px;
+    width: 20% !important;
 }
 p{
     margin: 0px 0 0px;
