--- a/main.css
+++ b/main.css
@@ -7,7 +7,12 @@ html {
   }
 body{
     margin-top:20px;
-    background:#ebeef0;
+    background:#999;
+}
+.container{
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 .panel {
     box-shadow: 0 2px 0 rgba(0,0,0,0.075);
