--- a/public/dashboard/style.css
+++ b/public/dashboard/style.css
@@ -1,98 +1,127 @@
-.hoverable {
-  display: inline-block;
-  backface-visibility: hidden;
-  vertical-align: middle;
-  position: relative;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  tranform: translateZ(0);
-  transition-duration: .3s;
-  transition-property: transform;
+td{
+  color:black !important;
 }
 
-.hoverable:before {
+#chatpop{
+  display: none;
   position: absolute;
-  pointer-events: none;
-  z-index: -1;
-  content: '';
-  top: 100%;
-  left: 5%;
-  height: 10px;
-  width: 90%;
-  opacity: 0;
-  background: -webkit-radial-gradient(center, ellipse, rgba(255, 255, 255, 0.35) 0%, rgba(255, 255, 255, 0) 80%);
-  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.35) 0%, rgba(255, 255, 255, 0) 80%);
-  /* W3C */
-  transition-duration: 0.3s;
-  transition-property: transform, opacity;
+  top: 100px;
+  left:30%;
+  z-index: 99;
+}
+.shut{
+  float: right;
+}
+.shut:hover{
+  cursor: pointer;
+}
+.chat-list {
+  padding: 0;
+  font-size: .8rem;
 }
 
-.hoverable:hover, .hoverable:active, .hoverable:focus {
-  transform: translateY(-5px);
+.chat-list li {
+  margin-bottom: 10px;
+  overflow: auto;
+  color: #ffffff;
 }
 
-.hoverable:hover:before, .hoverable:active:before, .hoverable:focus:before {
-  opacity: 1;
-  transform: translateY(-5px);
+.chat-list .chat-img {
+  float: left;
+  width: 48px;
 }
 
-@keyframes bounce-animation {
-  16.65% {
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-  33.3% {
-    -webkit-transform: translateY(-6px);
-    transform: translateY(-6px);
-  }
-  49.95% {
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);
-  }
-  66.6% {
-    -webkit-transform: translateY(-2px);
-    transform: translateY(-2px);
-  }
-  83.25% {
-    -webkit-transform: translateY(1px);
-    transform: translateY(1px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
-.bounce {
-  animation-name: bounce-animation;
-  animation-duration: 2s;
+.chat-list .chat-img img {
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  width: 100%;
 }
 
-/*everything below here is just setting up the page, so dont worry about it */
-@media (min-width: 768px) {
-  .navbar {
-    text-align: center !important;
-    float: none;
-    display: inline-block;
-  }
+.chat-list .chat-message {
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  background: #5a99ee;
+  display: inline-block;
+  padding: 10px 20px;
+  position: relative;
 }
-body {
-  background-color: black;
+
+.chat-list .chat-message:before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  width: 0;
+  height: 0;
+}
+
+.chat-list .chat-message h5 {
+  margin: 0 0 5px 0;
   font-weight: 600;
-  text-align: center !important;
-  color: white;
+  line-height: 100%;
+  font-size: .9rem;
 }
 
-nav {
-  background: none !important;
-  text-transform: uppercase;
-}
-nav li {
-  margin-left: 3em;
-  margin-right: 3em;
-}
-nav li a {
-  transition: .5s color ease-in-out;
+.chat-list .chat-message p {
+  line-height: 18px;
+  margin: 0;
+  padding: 0;
 }
 
-.page-title {
-  opacity: .75 !important;
+.chat-list .chat-body {
+  margin-left: 20px;
+  float: left;
+  width: 70%;
+}
+
+.chat-list .in .chat-message:before {
+  left: -12px;
+  border-bottom: 20px solid transparent;
+  /* border-right: 20px solid #5a99ee; */
+}
+
+.chat-list .out .chat-img {
+  float: right;
+}
+
+.chat-list .out .chat-body {
+  float: right;
+  margin-right: 20px;
+  text-align: right;
+}
+
+.chat-list .out .chat-message {
+  background: #fc6d4c;
+}
+
+.chat-list .out .chat-message:before {
+  right: -12px;
+  border-bottom: 20px solid transparent;
+  /* border-left: 20px solid #fc6d4c; */
+}
+
+.card .card-header:first-child {
+  -webkit-border-radius: 0.3rem 0.3rem 0 0;
+  -moz-border-radius: 0.3rem 0.3rem 0 0;
+  border-radius: 0.3rem 0.3rem 0 0;
+}
+.card .card-header {
+  background: #17202b;
+  border: 0;
+  font-size: 1rem;
+  padding: .65rem 1rem;
+  position: relative;
+  font-weight: 600;
+  color: #ffffff;
+}
+.card-body{
+  height: 400px;
+  overflow: scroll;
+  overflow-x: hidden;
+  background: rebeccapurple;
+
+}
+.content{
+  margin-top:40px;    
 }
