--- a/public/dashboard/style.css
+++ b/public/dashboard/style.css
@@ -1,13 +1,66 @@
-td{
-  color:black !important;
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+body {
+  font-family:sans-serif;
+  font-size: 14px;
+  line-height: inherit;
+}
+thead{
+  background: rgb(239, 41, 100);
+  color: white;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button.current{
+  border-radius: 20px;
+  background: #f8f9fa;
+  color: rgb(239, 41, 100) !important;
+  border-color: rgb(239, 41, 100);
+} 
+td 
+{
+    height: 50px; 
+    width: 50px;
+   color:#8a7a7a !important;
+
+}
+
+
+#chattable td 
+{
+    /* text-align: center;  */
+    vertical-align: middle;
+}
+button:focus{
+  outline: none;
+}
+.option{
+  font-size: 14px;
+  line-height: 18px;
+  background-color: white;
+  color: rgb(239, 41, 100)!important;
+  display: inline-block;
+  padding: 10px;
+  border-radius: 20px;
+  border-style: solid !important;
+  border-width: 1px;
+   border-color: rgb(239, 41, 100);
+  display: block;
+  margin: 5px;
+  width: 100%;
+  text-align: center;
+}
+.option:hover{
+  cursor: pointer;
 }
 
 #chatpop{
+  width: 400px;
   display: none;
-  position: absolute;
-  top: 100px;
-  left:30%;
-  z-index: 99;
+  position: fixed;
+  bottom: 80px;
+  right: 10px;
 }
 .shut{
   float: right;
@@ -42,19 +95,20 @@ td{
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   border-radius: 50px;
-  background: #5a99ee;
+  background: #eef1f3;
+  color: #333;
   display: inline-block;
   padding: 10px 20px;
   position: relative;
 }
 
-.chat-list .chat-message:before {
+/* .chat-list .chat-message:before {
   content: "";
   position: absolute;
   top: 15px;
   width: 0;
   height: 0;
-}
+} */
 
 .chat-list .chat-message h5 {
   margin: 0 0 5px 0;
@@ -70,7 +124,6 @@ td{
 }
 
 .chat-list .chat-body {
-  margin-left: 20px;
   float: left;
   width: 70%;
 }
@@ -87,12 +140,12 @@ td{
 
 .chat-list .out .chat-body {
   float: right;
-  margin-right: 20px;
   text-align: right;
 }
 
 .chat-list .out .chat-message {
-  background: #fc6d4c;
+  background: rgb(239, 41, 100);
+  color: white;
 }
 
 .chat-list .out .chat-message:before {
@@ -107,7 +160,7 @@ td{
   border-radius: 0.3rem 0.3rem 0 0;
 }
 .card .card-header {
-  background: #17202b;
+  background: rgb(239, 41, 100);
   border: 0;
   font-size: 1rem;
   padding: .65rem 1rem;
@@ -115,13 +168,27 @@ td{
   font-weight: 600;
   color: #ffffff;
 }
-.card-body{
+.popbody{
   height: 400px;
   overflow: scroll;
   overflow-x: hidden;
-  background: rebeccapurple;
+  background:#fff;
 
 }
 .content{
   margin-top:40px;    
+}
+
+/* scrollbar */
+.popbody::-webkit-scrollbar {
+  width: 1px;
+}
+
+.popbody::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.popbody::-webkit-scrollbar-thumb {
+background-color: darkgrey;
+outline: 1px solid slategrey;
 }
