--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:600);
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 *{
     border-style: none !important;
 }
@@ -291,7 +293,7 @@ p{
 
 .requirementform{
     width: 80%;
-    background-color: #a94442;
+    background: linear-gradient(to right, rgb(241, 39, 17), rgb(245, 175, 25));
     position: absolute;
     top: 120px;
     left: 60px;
@@ -301,7 +303,7 @@ p{
     display: block;
     border-style: solid!important;
     border-width: 10px;
-    border-color: rgba(255,255,255,.1);
+    border-color: lightyellow;
 }
 h3{
     color: white;
@@ -330,18 +332,18 @@ label{
         margin: 0px !important;
     }
     .requirementform {
-        width: 80%;
-        background-color: #a94442;
+        width: 92%;
+        background: linear-gradient(to right, rgb(241, 39, 17), rgb(245, 175, 25));
         position: absolute;
-        top: 120px;
-        left: 40px;
-        height: 350px;
+        top: 100px;
+        left: 16px;
+        height: 460px;
         overflow: scroll;
         overflow-x: hidden;
         display: block;
         border-style: solid!important;
         border-width: 10px;
-        border-color: rgba(255,255,255,.1);
+        border-color: lightyellow;
     }
     .list-group li {
         margin-left: 0px !important;
@@ -353,3 +355,68 @@ label{
         width: 100% !important;
     }
   }
+
+  
+  .snip1417 {
+    font-family: 'Raleway', Arial, sans-serif;
+    border: none;
+    background-color: #5666a5;
+    border-radius: 5px;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 0px 30px;
+    display: inline-block;
+    margin: 15px 30px;
+    text-transform: uppercase;
+    line-height: 46px;
+    font-weight: 400;
+    font-size: 1em;
+    outline: none;
+    position: relative;
+    overflow: hidden;
+    font-size: 16px;
+    border-radius: 23px;
+    letter-spacing: 2px;
+    -webkit-transition: all 0.35s ease;
+    transition: all 0.35s ease;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform: translateZ(0);
+  }
+  .snip1417:before {
+    opacity: 0;
+    content: "";
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    border-radius: inherit;
+    background-color: #ffffff;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  .snip1417:after {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    border: 5px solid #5666a5;
+    content: '';
+    border-radius: inherit;
+  }
+  .snip1417:hover,
+  .snip1417.hover {
+    background-color: #5666a5;
+    color: #ffffff;
+  }
+  .snip1417:hover:before,
+  .snip1417.hover:before {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    opacity: 0.25;
+  }
+ 
