--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 *{
     border-style: none !important;
 }
@@ -10,6 +12,11 @@ html {
 body{
     margin-top:20px;
     background:#999;
+}
+.mainbody{
+    position: fixed;
+    right: 5px;
+    bottom: 20px;
 }
 .container{
     display:flex;
@@ -273,9 +280,7 @@ p{
     margin-left: 20px;
     margin-top: 20px;
 }
-.fa-praying-hands{
-    color: #b10f70;
-}
+
 .list-group li{
     margin-left: 40%;
 }
@@ -291,24 +296,22 @@ p{
 
 .requirementform{
     width: 80%;
-    background-color: #a94442;
+    background-color: rgb(239, 41, 100);
     position: absolute;
     top: 120px;
     left: 60px;
-    height: 350px;
-    overflow: scroll;
-    overflow-x: hidden;
+    height: 300px;
     display: block;
-    border-style: solid!important;
-    border-width: 10px;
-    border-color: rgba(255,255,255,.1);
+    border-radius: 20px;
+
 }
+
 h3{
     color: white;
 }
 
 /* scrollbar */
-.requirementform::-webkit-scrollbar {
+/* .requirementform::-webkit-scrollbar {
     width: 1px;
 }
  
@@ -319,30 +322,42 @@ h3{
 .requirementform::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
-}
+} */
 label{
     color: white !important;
+    margin-left: 10px;
 }
+.send{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media only screen and (max-width: 600px) {
+    .send {
+        margin-top: -10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
     .container {
         width: 100% !important;
         padding:0px !important;
         margin: 0px !important;
     }
     .requirementform {
-        width: 80%;
-        background-color: #a94442;
+        width: 90%;
+        background-color: rgb(239, 41, 100);
         position: absolute;
         top: 120px;
-        left: 40px;
-        height: 350px;
+        left: 20px;
+        height: 280px;
         overflow: scroll;
         overflow-x: hidden;
         display: block;
-        border-style: solid!important;
-        border-width: 10px;
-        border-color: rgba(255,255,255,.1);
+        border-radius: 20px;
     }
+
     .list-group li {
         margin-left: 0px !important;
     }
@@ -353,3 +368,94 @@ label{
         width: 100% !important;
     }
   }
+
+
+
+button.snip1086 {
+  font-family: 'Raleway', Arial, sans-serif;
+  border: none;
+  background-color: #000000;
+  border-radius: 5px;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 10px 40px;
+  display: inline-block;
+  margin: 15px 40px;
+  text-transform: uppercase;
+  line-height: 1.5em;
+  font-weight: 500;
+  font-size: 1em;
+  outline: none;
+  position: relative;
+  opacity: 1;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+button.snip1086 span {
+  display: inline-block;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0.8;
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+button.snip1086 i {
+  font-size: 28px;
+  text-align: center;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  display: block;
+  position: absolute;
+  opacity: 0;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
+button.snip1086:before {
+  content: '';
+  top: 0;
+  left: 50%;
+  right: 50%;
+  position: absolute;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.15);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-transition-delay: 0.15s;
+  transition-delay: 0.15s;
+}
+button.snip1086:hover span,
+button.snip1086.hover span {
+  opacity: 0;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
+button.snip1086:hover i,
+button.snip1086.hover i {
+  opacity: 1;
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+}
+button.snip1086:hover:before,
+button.snip1086.hover:before {
+  left: 0;
+  right: 0;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
+button.snip1086:active:before {
+  background: rgba(255, 255, 255, 0.3);
+}
+button.snip1086.blue {
+  background-color: #20638f;
+}
+button.snip1086.red {
+  background-color: #962d22;
+}
+button.snip1086.yellow {
+  background-color: #a85913;
+}
