--- a/public/main.css
+++ b/public/main.css
@@ -18,16 +18,13 @@ body{
     right: 5px;
     bottom: 20px;
 }
-.container{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-}
 .panel {
     box-shadow: 0 2px 0 rgba(0,0,0,0.075);
     border-radius: 0;
     border: 0;
-    margin-bottom: 24px;
+    width: 40%;
+    height: 100%;
+    margin-left: 30%;
 }
 .panel .panel-heading, .panel>:first-child {
     border-top-left-radius: 0;
@@ -273,7 +270,6 @@ p{
     margin-top: 20px;
     cursor: pointer;
     color: white;
-
 }
 .avatar{
     position: absolute;
@@ -334,6 +330,14 @@ label{
 }
 
 @media only screen and (max-width: 600px) {
+    .panel {
+        box-shadow: 0 2px 0 rgba(0,0,0,0.075);
+        border-radius: 0;
+        border: 0;
+        width: 100%;
+        height: 100%;
+        margin: -20px 0px;
+    }
     .send {
         margin-top: -10px;
         display: flex;
