--- a/public/main.css
+++ b/public/main.css
@@ -291,14 +291,16 @@ p{
 
 
 .requirementform{
-    width: 80%;
+    width: 30%;
     background-color: rgb(239, 41, 100);
     position: absolute;
-    top: 120px;
-    left: 60px;
+    top: 140px;
+    left: 35%;
     height: 300px;
     display: block;
     border-radius: 20px;
+    padding: 20px;
+    overflow: hidden;
 
 }
 
@@ -350,14 +352,11 @@ label{
         margin: 0px !important;
     }
     .requirementform {
-        width: 90%;
+        width: 95%;
         background-color: rgb(239, 41, 100);
         position: absolute;
-        top: 120px;
-        left: 20px;
-        height: 280px;
-        overflow: scroll;
-        overflow-x: hidden;
+        top: 180px;
+        left: 10px;
         display: block;
         border-radius: 20px;
     }
