--- a/public/main.css
+++ b/public/main.css
@@ -11,7 +11,9 @@ html {
   }
 body{
     margin-top:20px;
-    background:#999;
+  background:url("https://images.pexels.com/photos/747964/pexels-photo-747964.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .mainbody{
     position: fixed;
@@ -25,6 +27,7 @@ body{
     width: 40%;
     height: 100%;
     margin-left: 30%;
+    background: rgba(52, 57, 61, .7);
 }
 .panel .panel-heading, .panel>:first-child {
     border-top-left-radius: 0;
@@ -35,7 +38,7 @@ body{
     padding: 0;
     border-bottom:1px solid #eee;
     height: 100px;
-    background:rgb(239, 41, 100);
+    background:rgba(52, 57, 61, .7);
     color: white
 }
 .panel-control {
@@ -52,6 +55,9 @@ body{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.panel-footer{
+    background:#ffffff00 !important;
 }
 .panel-control>.btn:last-child, .panel-control>.btn-group:last-child>.btn:first-child {
     border-bottom-right-radius: 0;
@@ -103,8 +109,8 @@ body{
 }
 .speech {
     position: relative;
-    background: #eef1f3;
-    color:#333;
+    background: rgba(52, 57, 61, .7);
+    color:#5bc2cc;
     display: inline-block;
     padding: 10px;
     border-radius: 20px;
@@ -148,15 +154,15 @@ body{
     padding-right: 15px;
 }
 .speech-right>.speech {
-    background: rgb(239, 41, 100);
-    color: white;
+    background: rgba(52, 57, 61, .7);
+    color: #b9a4a4;
     text-align: center;
 }
 .speech-right>.speech .media-heading {
     color: #a07617;
 }
 .btn-primary, .btn-primary:focus, .btn-hover-primary:hover, .btn-hover-primary:active, .btn-hover-primary.active, .btn.btn-active-primary:active, .btn.btn-active-primary.active, .dropdown.open>.btn.btn-active-primary, .btn-group.open .dropdown-toggle.btn.btn-active-primary {
-    background-color: #579ddb;
+    background-color: rgba(52, 57, 61, .7);
     border-color: #5fa2dd;
     color: #fff !important;
 }
@@ -181,6 +187,9 @@ body{
     border: 1px solid #e9e9e9;
     transition-duration: .5s;
     border-radius: 20px;
+    background: #66afe900;
+    color:#5bc2cc ;
+    border: 1px solid #00BCD4 !important;
 }
 .nano>.nano-pane {
     background-color: rgba(0,0,0,0.1);
@@ -208,14 +217,14 @@ a:hover{
 .option{
     font-size: 14px;
     line-height: 18px;
-    background-color: white;
-    color: rgb(239, 41, 100)!important;
+    background-color: rgba(52, 57, 61, .7);
+    color: #5bc2cc!important;
     display: inline-block;
     padding: 10px;
     border-radius: 20px;
     border-style: solid !important;
     border-width: 1px;
-     border-color: rgb(239, 41, 100);
+     border-color: #5bc2cc;
     display: block;
     margin: 5px;
     width: 100%;
@@ -224,31 +233,38 @@ a:hover{
 .yesno{
     font-size: 14px;
     line-height: 18px;
-    background-color: white;
-    color:  rgb(239, 41, 100)!important;
+    background-color:rgba(52, 57, 61, .7);
+    color:  #5bc2cc!important;
     display: inline-block;
     padding: 10px;
     border-radius: 20px;
     border-style: solid !important;
     border-width: 1px;
-    border-color: rgb(239, 41, 100);
+    border-color: #5bc2cc;
     display: block;
     margin: 5px;
     text-align: center;
 }
 .yesno:hover{
-    background: rgb(239, 41, 100);
+    background: #5bc2cc;
     color: white !important;
     cursor: pointer;
 }
 .option:hover{
-    background: rgb(239, 41, 100);
+    background: #5bc2cc;
     color: white !important;
 }
 #submit{
-    background: rgb(239, 41, 100);
-    color: white;
+    background: #5bc2cc00;
+    color: #00BCD4 !important;
     border-radius: 20px;
+    border: 1px solid #00bcd4 !important;
+}
+#submit:hover{
+    background: #00bcd4;
+    color:rgb(243, 239, 239) !important;
+    border-radius: 20px;
+    border: 1px solid #00bcd4 !important;
 }
 .chat-input{
     padding-right: 0px !important;
@@ -282,17 +298,18 @@ p{
 }
 .botname{
     position: absolute;
-    /* margin-right: 20px; */
     margin-left: 15px;
     font-size: 20px;
     font-weight: bold;
     margin-top: 20px;
+    color:#5bc2cc;
+    border-bottom: 1px solid #5bc2cc !important;
 }
 
 
 .requirementform{
     width: 30%;
-    background-color: rgb(239, 41, 100);
+    background-color: #5d6465;
     position: absolute;
     top: 140px;
     left: 35%;
@@ -301,6 +318,7 @@ p{
     border-radius: 20px;
     padding: 20px;
     overflow: hidden;
+    border: 1px solid #5bc2cc !important ;
 
 }
 
@@ -322,8 +340,9 @@ h3{
   outline: 1px solid slategrey;
 } */
 label{
-    color: white !important;
+    color:#00BCD4 !important;
     margin-left: 10px;
+  
 }
 .send{
     display: flex;
@@ -339,6 +358,7 @@ label{
         width: 100%;
         height: 100%;
         margin: -20px 0px;
+        background: rgba(52, 57, 61, .7);
     }
     .send {
         margin-top: -10px;
@@ -353,7 +373,7 @@ label{
     }
     .requirementform {
         width: 95%;
-        background-color: rgb(239, 41, 100);
+        background-color: #5d6465;
         position: absolute;
         top: 180px;
         left: 10px;
@@ -373,92 +393,59 @@ label{
   }
 
 
-
-button.snip1086 {
-  font-family: 'Raleway', Arial, sans-serif;
-  border: none;
-  background-color: #000000;
-  border-radius: 5px;
-  color: #ffffff;
-  cursor: pointer;
-  padding: 10px 40px;
-  display: inline-block;
-  margin: 15px 40px;
-  text-transform: uppercase;
-  line-height: 1.5em;
-  font-weight: 500;
-  font-size: 1em;
-  outline: none;
-  position: relative;
-  opacity: 1;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-button.snip1086 span {
-  display: inline-block;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  opacity: 0.8;
-  -webkit-transition-delay: 0.3s;
-  transition-delay: 0.3s;
-}
-button.snip1086 i {
-  font-size: 28px;
-  text-align: center;
-  width: 100%;
-  top: 50%;
-  left: 0;
-  display: block;
-  position: absolute;
-  opacity: 0;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s;
-}
-button.snip1086:before {
-  content: '';
-  top: 0;
-  left: 50%;
-  right: 50%;
-  position: absolute;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.15);
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-transition-delay: 0.15s;
-  transition-delay: 0.15s;
-}
-button.snip1086:hover span,
-button.snip1086.hover span {
-  opacity: 0;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s;
-}
-button.snip1086:hover i,
-button.snip1086.hover i {
-  opacity: 1;
-  -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
-}
-button.snip1086:hover:before,
-button.snip1086.hover:before {
-  left: 0;
-  right: 0;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s;
-}
-button.snip1086:active:before {
-  background: rgba(255, 255, 255, 0.3);
-}
-button.snip1086.blue {
-  background-color: #20638f;
-}
-button.snip1086.red {
-  background-color: #962d22;
-}
-button.snip1086.yellow {
-  background-color: #a85913;
-}
+/* button */
+.snip1582 {
+    background: rgba(52, 57, 61, .5);
+    border: none;
+    color: #5bc2cc;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 12px;
+    line-height: 1em;
+    margin: 15px 40px;
+    outline: none;
+    padding: 12px 40px 10px;
+    position: relative;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+  
+  .snip1582:before,
+  .snip1582:after {
+    border-color: transparent;
+    -webkit-transition: all 0.25s;
+    transition: all 0.25s;
+    border-style: solid;
+    border-width: 0;
+    content: "";
+    height: 24px;
+    position: absolute;
+    width: 24px;
+  }
+  
+  .snip1582:before {
+    border-color: #5bc2cc;
+    border-top-width: 2px;
+    left: 0px;
+    top: -5px;
+  }
+  
+  .snip1582:after {
+    border-bottom-width: 2px;
+    border-color: #5bc2cc;
+    bottom: -5px;
+    right: 0px;
+  }
+  
+  .snip1582:hover,
+  .snip1582.hover {
+      background: rgba(52, 57, 61, .5);
+  }
+  
+  .snip1582:hover:before,
+  .snip1582.hover:before,
+  .snip1582:hover:after,
+  .snip1582.hover:after {
+    height: 100%;
+    width: 100%;
+  }
