--- a/public/main.css
+++ b/public/main.css
@@ -96,11 +96,11 @@ body{
     float: left;
 }
 .img-sm {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 55px;
 }
 .img-m {
-    width: 25px;
+    width: 30px;
     height: 25px;
 }
 .media-block .media-body {
@@ -301,10 +301,12 @@ p{
 .list-group li{
     margin-left: 40%;
 }
+.media-left, .media>.pull-left {
+    padding-right: 0px !important;
+}
 .botname{
     position: absolute;
-    margin-left: 15px;
-    font-size: 20px;
+    font-size: 15;
     margin-top: 20px;
     color:#4ce8f7;
     border-bottom: 1px solid currentColor !important;
