--- a/public/dashboard/style.css
+++ b/public/dashboard/style.css
@@ -204,3 +204,16 @@ button:focus{
 background-color: darkgrey;
 outline: 1px solid slategrey;
 }
+@media only screen and (max-width: 600px) {
+  .card{
+    width: 95% !important;
+    overflow: scroll;
+  }
+  #chatpop {
+    width: 400px;
+    display: none;
+    position: fixed;
+    bottom: 200px;
+    right: 0px;
+}
+}
