--- a/public/main.css
+++ b/public/main.css
@@ -15,6 +15,13 @@ body{
   background-repeat: no-repeat;
   background-position: center;
 }
+.tagline{
+    color: #c3c3b9;
+    position: absolute;
+    top: 40px !important;
+    left: 90px;
+    font-size: 10px;
+}
 .mainbody{
     position: fixed;
     right: 5px;
